Upgraded build JDK to 17